@@ -13,6 +13,7 @@ SubVersion: $Id$
 	- [kevin] $2102: increased buffer size for the RELEASE viewer
 	- [kevin] $2115: fixed splash.c saying "TiLP" instead of "TiEmu", updated version in configure.ac
 	- [kevin] $2116: allocate metadata properly in send_file_and_debug_info
+	- [kevin] $2118: fixed Insight preferences dialogs
 
 - 25/08/2005, version 2.80:
 	- [roms] $1689: fixed Titanium skin loading and fixed bug in skin loader
